2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-file.[ch]:
	Add nautilus_file_get_for_location and nautilus_file_get_existing_for_location.
	and implement nautilus_file_get based on these.

2007-09-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
        Add nautilus_file_get_location () and use it when
	generating uris.

2007-09-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory.c:
        (nautilus_directory_is_desktop_directory):
        * libnautilus-private/nautilus-file-utilities.[ch]:
        (nautilus_is_home_directory_file):
        (nautilus_is_desktop_directory_file):
        (nautilus_is_desktop_directory):
        * libnautilus-private/nautilus-file.c:
        (nautilus_file_is_desktop_directory):
        (nautilus_file_is_home):
	Don't keep dup:ing strings for these commonly called
	functions.

2007-09-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory-private.h:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-file-utilities.[ch]:
        * libnautilus-private/nautilus-file.c:
	Use GFile *location to store the uri for NautilusDirectory.
	In preparation for using GFile for all I/O.

2007-09-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-file-attributes.h:
        * libnautilus-private/nautilus-file.[ch]:
        * libnautilus-private/nautilus-mime-actions.c:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-ditem-page.c:
        * src/file-manager/fm-properties-window.c:
        * src/nautilus-window.c: